# LDiHK

./: .dockerignore  .env.example  .gitignore  Dockerfile  HONESTY.md  ORIGINAL_REQUEST.md  README.md  pyproject.toml
.agents/explorer_codebase_exploration/: BRIEFING.md  original_prompt.md  progress.md
.agents/explorer_codebase_exploration_2/: BRIEFING.md  analysis.md  original_prompt.md  progress.md
.agents/explorer_codebase_exploration_4/: original_prompt.md
.agents/explorer_codebase_exploration_5/: BRIEFING.md  original_prompt.md  progress.md
.agents/orchestrator/: BRIEFING.md  README.md  context.md  original_prompt.md  plan.md  progress.md
.agents/sentinel/: BRIEFING.md  handoff.md  original_prompt.md
.codex/environments/: environment.toml
.zed/: settings.json
Frontend/: .env.example  .gitignore  README.md  REQUIRED_API_SPEC.md  frontend-api-spec.md  package-lock.json  package.json
Helper-Folder/: Scoring-System-V3.py  Scoring_System-V1.py  Scoring_System-V2.py  User-Generator-V1.py  User-Generator-V2.py
backend/: __init__.py  app.py  db.py  http_boundary.py  imports_api.py  population_api.py  query_api.py  youtube_sql.py  youtube_temporal.py  youtube_usage.py
backend/enrichment/: __init__.py  durations.py  youtube_api.py
backend/ingestion/: __init__.py  dispatch.py  fingerprints.py  models.py  s3.py  worker.py  zip_safety.py
backend/migrations/: 001_youtube_imports.sql  002_platform_profile_synthetic_usage.sql  003_foreign_key_indexes.sql  004_enable_public_table_rls.sql
backend/scripts/: enrich_youtube_durations.py  (+8 more)
docs/: backend.md
(+91 files in other folders)
